Dodanie w chat_ms możliwości pobierania starych konwersacji posortowanych po dacie updatedAt.
